// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contacts should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col min-h-screen -m-5 bg-theme-neutral-200"
    data-testid="contacts"
  >
    <div
      class="flex items-center space-x-2 p-5 pl-10 font-semibold text-theme-neutral-700"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ hVzDKK"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-700"
          href="/portfolio"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5"
    >
      <div
        class="px-10 py-16 bg-theme-background"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              My Contacts
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Manage your frequent contacts
            </div>
          </div>
          <div>
            <div
              class="flex justify-end items-top"
            >
              <button
                class="sc-AxiKw wFYj whitespace-no-wrap"
                color="primary"
                data-testid="contacts__add-contact-btn"
                type="button"
              >
                Add Contact
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 items-start px-10 py-16 bg-theme-background"
      >
        <div
          class="flex flex-col items-center justify-center w-full"
          data-testid="contacts__banner"
        >
          <div
            class="mx-auto"
          >
            <svg
              height="175"
            >
              contacts-banner.svg
            </svg>
          </div>
          <div
            class="mt-8"
          >
            <span
              class="text-theme-neutral-dark"
            >
              Add your most frequent contacts for fast, easy payments
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Contacts should render with contacts 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col min-h-screen -m-5 bg-theme-neutral-200"
    data-testid="contacts"
  >
    <div
      class="flex items-center space-x-2 p-5 pl-10 font-semibold text-theme-neutral-700"
      data-testid="breadcrumbs__wrapper"
    >
      <div
        class="sc-AxirZ hVzDKK"
        height="10"
        width="19"
      >
        <svg>
          arrow-back.svg
        </svg>
      </div>
      <div
        class="space-x-2"
      >
        <a
          class="text-theme-neutral-700"
          href="/portfolio"
        >
          <span>
            Go back to Portfolio
          </span>
        </a>
      </div>
    </div>
    <div
      class="flex flex-col flex-1 space-y-5"
    >
      <div
        class="px-10 py-16 bg-theme-background"
      >
        <div
          class="flex items-end justify-between bg-theme-background"
        >
          <div>
            <h1
              class="mb-0 text-3xl font-bold md:text-4xl"
              data-testid="header__title"
            >
              My Contacts
            </h1>
            <div
              class="text-theme-neutral-dark"
              data-testid="header__subtitle"
            >
              Manage your frequent contacts
            </div>
          </div>
          <div>
            <div
              class="flex justify-end items-top"
            >
              <div
                class="relative"
              >
                <button
                  class="h-full my-auto font-semibold cursor-pointer text-theme-primary-200"
                  data-testid="header-search-bar__button"
                >
                  <div
                    class="flex items-center space-x-3"
                  >
                    <span>
                      Search
                    </span>
                    <div
                      class="sc-AxirZ eEbZjj"
                      height="20"
                      width="20"
                    >
                      <svg>
                        search.svg
                      </svg>
                    </div>
                  </div>
                </button>
              </div>
              <div
                class="h-10 pl-8 my-auto ml-8 border-l border-theme-neutral-200"
              />
              <button
                class="sc-AxiKw wFYj whitespace-no-wrap"
                color="primary"
                data-testid="contacts__add-contact-btn"
                type="button"
              >
                Add Contact
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-1 items-start px-10 py-16 bg-theme-background"
      >
        <div
          class="w-full"
        >
          <div
            class="sc-fzplWN kEUFYN"
            role="table"
          >
            <table
              class="table-auto"
            >
              <thead>
                <tr
                  role="row"
                >
                  <th
                    class="text-sm text-left select-none text-theme-neutral-500"
                    colspan="1"
                    data-testid="table__th--0"
                    role="columnheader"
                    style="cursor: pointer;"
                    title="Toggle SortBy"
                  >
                    <div
                      class="flex flex-inline align-top  pl-13"
                    >
                      <div
                        class="mr-2"
                      >
                        Nickname
                      </div>
                      <div
                        class="flex items-center text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      >
                        <div
                          class="sc-AxirZ jMwzyA"
                          height="12"
                          width="15"
                        >
                          <svg>
                            sort.svg
                          </svg>
                        </div>
                      </div>
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral-500"
                    colspan="1"
                    data-testid="table__th--1"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  justify-center"
                    >
                      <div
                        class="mr-2"
                      >
                        Network
                      </div>
                      <div
                        class="flex items-center text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral-500"
                    colspan="1"
                    data-testid="table__th--2"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  pl-13"
                    >
                      <div
                        class="mr-2"
                      >
                        Address
                      </div>
                      <div
                        class="flex items-center text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                  <th
                    class="text-sm text-left select-none text-theme-neutral-500"
                    colspan="1"
                    data-testid="table__th--3"
                    role="columnheader"
                  >
                    <div
                      class="flex flex-inline align-top  justify-center"
                    >
                      <div
                        class="mr-2"
                      >
                        Account Type
                      </div>
                      <div
                        class="flex items-center text-theme-color-neutral-500"
                        data-testid="table__Sort"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                role="rowgroup"
              >
                <tr>
                  <td
                    class="text-center border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <div
                        class="sc-fznKkj eisocE bg-theme-primary-600 border-theme-primary-600"
                      >
                        <span
                          class="text-sm text-theme-background"
                        >
                          RO
                        </span>
                      </div>
                      <span
                        class="font-semibold"
                      >
                        ROBank
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-center border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="sc-fznKkj eisocE border-ark-mainnet"
                    >
                      <div
                        class="sc-AxirZ iQaTP text-ark-mainnet"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <div
                        class="sc-fznKkj fFsEIt"
                      />
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="sc-fznyAO hdDwJr text-theme-neutral-800 font-semibold text-base"
                          data-testid="address__wallet-address"
                        >
                          ASuusX…GQ3kqT
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
                  >
                    <div
                      class="sc-fznKkj eisocE border-black"
                    >
                      <div
                        class="sc-AxirZ dCVESD"
                        height="25"
                        width="25"
                      >
                        <svg>
                          delegate.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="sc-fznKkj eisocE border-black"
                    >
                      <div
                        class="sc-AxirZ dCVESD"
                        height="25"
                        width="25"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                    <div
                      class="sc-fznKkj eisocE border-black"
                    >
                      <div
                        class="sc-AxirZ dCVESD"
                        height="25"
                        width="25"
                      >
                        <svg>
                          bridgechain.svg
                        </svg>
                      </div>
                    </div>
                  </td>
                  <td
                    class="border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right"
                      >
                        <button
                          class="sc-AxiKw htlvx"
                          color="primary"
                          type="button"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-center "
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <div
                        class="sc-fznKkj eisocE bg-theme-primary-600 border-theme-primary-600"
                      >
                        <span
                          class="text-sm text-theme-background"
                        >
                          OL
                        </span>
                      </div>
                      <span
                        class="font-semibold"
                      >
                        OLEBank
                      </span>
                    </div>
                  </td>
                  <td
                    class="text-center "
                  >
                    <div
                      class="sc-fznKkj eisocE border-ark-mainnet"
                    >
                      <div
                        class="sc-AxirZ iQaTP text-ark-mainnet"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          ark.svg
                        </svg>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <div
                        class="sc-fznKkj fFsEIt"
                      />
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="sc-fznyAO hdDwJr text-theme-neutral-800 font-semibold text-base"
                          data-testid="address__wallet-address"
                        >
                          ASuusX…GQ3kqT
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
                  >
                    <div
                      class="sc-fznKkj eisocE border-black"
                    >
                      <div
                        class="sc-AxirZ dCVESD"
                        height="25"
                        width="25"
                      >
                        <svg>
                          delegate.svg
                        </svg>
                      </div>
                    </div>
                  </td>
                  <td
                    class="border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="relative"
                      data-testid="dropdown__toggle"
                    >
                      <div
                        class="float-right"
                      >
                        <button
                          class="sc-AxiKw htlvx"
                          color="primary"
                          type="button"
                        >
                          <div
                            class="sc-AxirZ eEbZjj"
                            height="20"
                            width="20"
                          >
                            <svg>
                              settings.svg
                            </svg>
                          </div>
                        </button>
                      </div>
                    </div>
                  </td>
                </tr>
                <tr>
                  <td
                    class="text-center "
                  />
                  <td
                    class="text-center "
                  >
                    <div
                      class="sc-fznKkj eisocE border-bitcoin-mainnet"
                    >
                      <div
                        class="sc-AxirZ iQaTP text-bitcoin-mainnet"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          btc.svg
                        </svg>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <div
                        class="sc-fznKkj fFsEIt"
                      />
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="sc-fznyAO hdDwJr text-theme-neutral-800 font-semibold text-base"
                          data-testid="address__wallet-address"
                        >
                          15pyr1…XXu9G8
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
                  />
                  <td
                    class="border-b border-dashed border-theme-neutral-200"
                  />
                </tr>
                <tr>
                  <td
                    class="text-center border-b border-dashed border-theme-neutral-200"
                  />
                  <td
                    class="text-center border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="sc-fznKkj eisocE border-ethereum-mainnet"
                    >
                      <div
                        class="sc-AxirZ iQaTP text-ethereum-mainnet"
                        height="1em"
                        width="1em"
                      >
                        <svg>
                          eth.svg
                        </svg>
                      </div>
                    </div>
                  </td>
                  <td
                    class="py-6 border-b border-dashed border-theme-neutral-200"
                  >
                    <div
                      class="flex items-center space-x-3"
                    >
                      <div
                        class="sc-fznKkj fFsEIt"
                      />
                      <div
                        class="inline-block truncate align-middle"
                      >
                        <span
                          class="sc-fznyAO hdDwJr text-theme-neutral-800 font-semibold text-base"
                          data-testid="address__wallet-address"
                        >
                          0x5e8f…0d7c33
                        </span>
                      </div>
                    </div>
                  </td>
                  <td
                    class="text-sm font-bold text-center border-b border-dashed border-theme-neutral-200 space-x-2"
                  >
                    <div
                      class="sc-fznKkj eisocE border-black"
                    >
                      <div
                        class="sc-AxirZ dCVESD"
                        height="25"
                        width="25"
                      >
                        <svg>
                          business.svg
                        </svg>
                      </div>
                    </div>
                  </td>
                  <td
                    class="border-b border-dashed border-theme-neutral-200"
                  />
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
